# mail2tg

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
deploy/: mail2tg.service
src/: cli.rs  config.rs  control.rs  daemon.rs  imap_client.rs  main.rs  state.rs  telegram.rs
src/email/: card.rs  mod.rs  recipient.rs  sender.rs
src/email/testdata/: anthropic_magic_link.eml
src/store/: config_file.rs  credentials.rs  mod.rs
