[package]
name = "mail2tg"
version = "0.1.0"
edition = "2021"

[dependencies]
imap = { version = "2.4", default-features = false }
rustls-connector = "0.21"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = "0.9"
regex = "1"
dialoguer = { version = "0.11", features = ["password"] }
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
